--- a/src/styles/Container.css
+++ b/src/styles/Container.css
@@ -16,7 +16,7 @@
     font-size: 17px;
     height: 20px;
     margin: 10px;
-    width: 300px;
+    width: 250px;
     padding: 5px;
 }
 
@@ -56,10 +56,12 @@
     box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.03);
     display: flex;
     flex-direction: column;
-    height: 0%;  
+    height: 330px;
+    width: 345px;  
     justify-content: center;
     margin-bottom: 20px;
-    margin-right: 20px;
+    margin-right: 10px;
+    margin-left: 10px;
     overflow: hidden;
   }
   
@@ -74,5 +76,8 @@
   
   .card img {
     width: 100%;
+    height: 80%;
+    /* width: 100px; */
+    /* height: 200px; */
 
   }
